Configure settings, update deprecated 'URL(java.lang.String)'